Mon Sep 06 00:49:11 BST 2004  Olly Betts <olly@survex.com>

	* tests/apitest_parser.pm: Removed long unused file.

Sun Sep 05 22:53:27 BST 2004  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Tweaked documentation comment to stop
	  doxygen parsing a hyphen as a single entry bullet point list.

Sun Sep 05 20:20:01 BST 2004  Olly Betts <olly@survex.com>

	* testsuite/backendmanager.h: Added missing "std::" so code will
	  compile with GCC >= 3.

Sun Sep 05 13:54:58 BST 2004  Olly Betts <olly@survex.com>

	* testsuite/backendmanager.h: Removed superfulous "BackendManager::".

Sun Sep 05 01:54:49 BST 2004  Olly Betts <olly@survex.com>

	* common/utils.cc,common/utils.h: Removed now unused files_exist()
	  function.

Sun Sep 05 01:50:35 BST 2004  Olly Betts <olly@survex.com>

	* tests/api_db.cc,tests/apitest.cc,tests/apitest.h,
	  testsuite/backendmanager.cc,testsuite/backendmanager.h:
	  Cleaned up BackendManager by removing complications only required
	  by absentfile1 test, which can be implemented more directly anyway.

Sun Sep 05 01:33:16 BST 2004  Olly Betts <olly@survex.com>

	* tests/quartztest.cc: Cleaned up rather odd code which is a hangover
	  from when keys and tags weren't simply C++ strings.

Sat Sep 04 12:35:12 BST 2004  Olly Betts <olly@survex.com>

	* HACKING: Updated details of which autotools we require.

Fri Sep 03 17:51:59 BST 2004  Olly Betts <olly@survex.com>

	* configure.ac: Require autoconf 2.59.  Noted LIBRARY_VERSION_INFO
	  which 0.8.2 will probably have.
	* Makefile.am: Require automake 1.8.5.

Fri Sep 03 16:40:11 BST 2004  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated with results from tinderbox.

Fri Sep 03 14:34:00 BST 2004  Olly Betts <olly@survex.com>

	* autoconf/definedir.m4,autoconf/rjb_find_stlport.m4: Quote macro
	  names to fix warning from newer aclocal.  Removed comments about
	  future autodetection of stlport, as the user will always need to
	  decide between the STL supplied with the compiler and stlport.